Refactorización: API FastAPI con RAG persistente y arquitectura modular
- Implementada API FastAPI con endpoints para upload, chat y clear_history
- Pipeline RAG conversacional con historial de mensajes
- Vectorstore persiste en disco (data/chroma_store) usando ChromaDB
- Refactorizado código RAG a utils.py para mejor separación de responsabilidades
- Funciones ahora retornan valores en lugar de modificar variables globales
- Soporte para PDF, DOCX y TXT con fallback automático de loaders
- Agregada guía MCP_SETUP_GUIDE.md para futura integración
- Actualizado .gitignore y movido requirements.txt a raíz del proyecto
- Eliminados archivos de datos de ejemplo del repositorio

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 .env
 venv/
+
+# Google Drive credentials
+credentials.json
+token.json
+*.json
+!package.json
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+data/
